# cmixf

./: README.md  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml
cmixf/: cmixf.lex  parser.py
cmixf/tests/: test_cmixf.py
