[metadata]
url = https://github.com/satra/cmixf
author = satra
author_email = satra@mit.edu
maintainer = satra
maintainer_email = satra@mit.edu
description = A CMIXF-12 library
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = Apache License, 2.0
provides =
    cmixf
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering

[options]
python_requires = >= 3.7
install_requires =
    sly
    click

test_requires =
    pytest >= 4.4.0
    pytest-cov
    pytest-env
    pytest-xdist
    pytest-rerunfailures
    codecov
packages = find:
include_package_data = True

[options.extras_require]
test =
    pytest >= 4.4.0
    pytest-cov
    pytest-env
    pytest-xdist
    pytest-rerunfailures
    codecov
tests =
    %(test)s
dev =
    %(test)s
    black
    pre-commit
all =
    %(dev)s

[options.entry_points]
console_scripts =
    cmixf=cmixf.parser:main

[versioneer]
VCS = git
style = pep440
versionfile_source = cmixf/_version.py
versionfile_build = cmixf/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
doctests = True
exclude =
    **/__init__.py
    **/tests/*
    *build/
    cmixf/_version.py
max-line-length=99
